<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra_mensagem_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintTop_toTopOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra_mensagem_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/mensagem_compra"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_mensagem_parabens"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_mensagem_parabens"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_mensagem_parabens"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resumo_da_compra"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner_inicial" />

    <ImageView
        android:id="@+id/resumo_compra_imagem_pacote"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra"
        tools:srcCompat="@drawable/sao_paulo_sp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/resumo_compra_local_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_imagem_pacote"
        tools:text="São Paulo"/>

    <TextView
        android:id="@+id/resumo_compra_periodo_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_local_pacote"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_local_pacote"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/resumo_compra_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_periodo_pacote"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_periodo_pacote"
        tools:text="R$ 243,99" />

</androidx.constraintlayout.widget.ConstraintLayout>