<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_pacote_imagem"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imagem_do_pacote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_imagem"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_pacote_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_local"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/resumo_pacote_periodo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/resumo_pacote_preco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_dias"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/resumo_pacote_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_pacote_periodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resumo_pacote_periodo"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/resumo_pacote_preco_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_final"
        app:layout_constraintBottom_toTopOf="@+id/resumo_pacote_preco"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/resumo_pacote_botao_realizarpagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/realizar_pagamento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>